// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LineGraph.helpers > useLineGraph > should assign full graph width to single graph segment 1`] = `
[
  {
    "className": "fill-current text-theme-success-600",
    "height": 8,
    "rx": 4,
    "width": 100,
    "x": 0,
    "y": 8,
  },
]
`;

exports[`LineGraph.helpers > useLineGraph > should plot data to svg rectangles needed to render the line 1`] = `
[
  {
    "className": "fill-current text-theme-success-600",
    "height": 8,
    "rx": 4,
    "width": 42,
    "x": 0,
    "y": 8,
  },
  {
    "className": "fill-current text-theme-warning-600",
    "height": 8,
    "rx": 4,
    "width": 22,
    "x": 50,
    "y": 8,
  },
  {
    "className": "fill-current text-theme-info-600",
    "height": 8,
    "rx": 4,
    "width": 20,
    "x": 80,
    "y": 8,
  },
]
`;
